[build-system]
requires = ["setuptools>=42", "wheel", "pytest"]
build-backend = "setuptools.build_meta"

[project]
name = "hearing_profiler"
authors = [
    { name = "Kevin Meyer", email = "8843655+kev-m@users.noreply.github.com" }
]
readme = "README.md"
license = { text = "GNU Lesser General Public License v3 or later (LGPLv3+)" }
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
dependencies = [
    "numpy>=1.21.0",
    "sounddevice>=0.4.0",
    "matplotlib>=3.5.0",
    "scipy>=1.7.0",
    "pygame>=2.0.0"
]

dynamic = ["version", "description"]

[project.urls]
"Homepage" = "https://github.com/kev-m/hearing_profile"
"Bug Tracker" = "https://github.com/kev-m/hearing_profile/issues"

[tool.flit.module]
name = "hearing_profiler"

[tool.flit.sdist]
include = [
    "hearing_profiler.py",
    "hearing_analyser.py"
]
exclude = [
    "docs",
    "tests",
    "data",
    ".gitignore",
    "requirements.txt",
    "requirements-dev.txt",
    "requirements-github.txt",
]


[project.scripts]
hearing_profiler = "hearing_profiler:main"
# hearing_analyser = "hearing_analyser:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --strict-markers"
testpaths = ["tests"]

[tool.autopep8]
max_line_length = 120
aggressive = 0